--- a/documents/settings.env
+++ b/documents/settings.env
@@ -1,11 +1,9 @@
-BOT_ADMINS = pavel_durov bill_gates
-BOT_TOKEN  = 123:ABC_def
+BOT_ADMINS = bill-gates stive-jobs
+BOT_TOKEN = 999999999:AAxNXnxMxRxGxNx7xBxEx_qXx5Six9p1lXx
 
-MAIN_MENU_01_INVITE = :tada: Получить приглашение
-MAIN_MENU_02_ABOUT  = :tada: О проекте
-
-ERR_YOU_ARE_NOT_ADMIN = :cop: Вы не админ!
-ERR_SOMETHING_WENT_WRONG = :hmm: Что-то пошло не так...
-ERR_TOO_LARGE = :hmm: Слишком большой файл. Предельный размер - 50 килобайт.
-ERR_MD_ONLY = :hmm: Можно выгружать только файлы с расширениями `.md` или `.env`.
-
+BUTTON_MAIN_MAIN    = Главная
+BUTTON_MAIN_USEFULL = Полезное
+BUTTON_MAIN_BASKET  = Корзина 
+BUTTON_MAIN_ORDERS  = Заказы
+BUTTON_MAIN_HELP    = Помощь
+BUTTON_BACK_MAIN    = В главное меню
